# topCoderSolutions

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  WORKSPACE.bazel  requirements.txt
src/: BoggleWordChecker.cpp  coolMapRecrutationTask.cpp  drakeStomach.cpp  floatPointPrec.cpp
tools/actions/: BUILD  generate_compile_command.py  generate_compile_commands_json.py
