load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_python//python:defs.bzl", "py_library")

# Intellisene for C++
# add this to every target
py_library(
    name = "Intellisene",
    deps = ['//tools/actions:generate_compile_command']
)

# =======================

cc_library(
    name = "third_party_test",
    deps = [
        "@com_google_googletest//:gtest_main",
    ]
)

cc_library(
    name = "third_party",
    deps = [
        "@com_google_absl//absl/strings",
    ]
)
